# Multimodal-Customer-Service-Intelligent-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: react_agent.py
agent/tools/: agent_tools.py  middle_ware.py
config/: agent.example.yml  milvus.example.yml  prompt.yml  rag.example.yml
model/: factory.py
prompts/: main_prompt.txt  rag_summary.txt
rag/: bm25_model.pkl  milvus_db.py  milvus_db_dense.py  rag_service.py  txt_chunk.py  vector_store.py
scripts/: batch_qa.py  reload_db.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_load.py
web/: main.py
web/static/: style.css
web/templates/: index.html
