[project]
name = "ai-agent-rag"
version = "1.0.0"
description = "基于 ReAct Agent + 多模态 RAG 的智能问答系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "pymilvus>=2.6.12",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
]

[project.scripts]
agent-web = "web.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "rag", "model", "utils", "web", "scripts", "config"]

[tool.uv]
dev-dependencies = []
